--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+# Dependencies
 node_modules/
+
+# Environment variables
 .env
-.DS_Store 
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db 
